RESOLVED FIXED210801
REGRESSION (r256808): “A problem repeatedly occurred” when attempting to load https://bungalow.com/listings/bay-area
https://bugs.webkit.org/show_bug.cgi?id=210801
Summary REGRESSION (r256808): “A problem repeatedly occurred” when attempting to load...
Chris Dumez
Reported 2020-04-21 09:16:11 PDT
When loading https://bungalow.com/listings/bay-area, the script gets into a bad state.
Attachments
Patch (4.54 KB, patch)
2020-04-21 09:19 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-04-21 09:16:23 PDT
Chris Dumez
Comment 2 2020-04-21 09:19:05 PDT
EWS
Comment 3 2020-04-21 10:14:13 PDT
Committed r260435: <https://trac.webkit.org/changeset/260435> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397086 [details].
Note You need to log in before you can comment on or make changes to this bug.